--- a/Images/test-cadence/Dockerfile
+++ b/Images/test-cadence/Dockerfile
@@ -14,8 +14,15 @@
 # WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 # See the License for the specific language governing permissions and
 # limitations under the License.
+#
+# ARGUMENTS:
+#
+#   ORGANIZATION    - The Docker Hub organization
+#   BRANCH          - The current GitHub branch
 
-FROM        nkubedev/aspnet:master-3.1.0-bionic
+ARG         ORGANIZATION
+ARG         BRANCH
+FROM        ${ORGANIZATION}/dotnet
 MAINTAINER  marcus@loopie.io
 STOPSIGNAL  SIGTERM
 ARG         APPNAME
