--- a/Test/Test.Neon.Common.net/Test.Neon.Common.net.csproj
+++ b/Test/Test.Neon.Common.net/Test.Neon.Common.net.csproj
@@ -312,6 +312,12 @@
     <Compile Include="..\Test.Neon.Common\Diagnostics\Test_Assert.cs">
       <Link>Diagnostics\Test_Assert.cs</Link>
     </Compile>
+    <Compile Include="..\Test.Neon.Common\Diagnostics\Test_Logger.TestLogger.cs">
+      <Link>Diagnostics\Test_Logger.TestLogger.cs</Link>
+    </Compile>
+    <Compile Include="..\Test.Neon.Common\Diagnostics\Test_Logger.TextLogger.cs">
+      <Link>Diagnostics\Test_Logger.TextLogger.cs</Link>
+    </Compile>
     <Compile Include="..\Test.Neon.Common\Helper\Test_ByteUnits.cs">
       <Link>Helper\Test_ByteUnits.cs</Link>
     </Compile>
